--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,8 +15,8 @@ jobs:
       with:
         dotnet-version: 2.1
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore lab1.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore lab1.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal lab1.sln
