--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,9 @@ name: .NET
 
 on:
   push:
-    branches: [ master ]
+    branches: [ bahioganns ]
   pull_request:
-    branches: [ master ]
+    branches: [ bahioganns ]
 
 jobs:
   build:
@@ -14,12 +14,12 @@ jobs:
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.7.2
       with:
-        dotnet-version: 2.1
+        dotnet-version: 3.1
     - name: List files
       run: ls -la
     - name: Restore dependencies
-      run: dotnet restore lab1.sln
+      run: dotnet restore Lab1.sln
     - name: Build
-      run: dotnet build --no-restore lab1.sln
+      run: dotnet build --no-restore Lab1.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal lab1.sln
+      run: dotnet test --no-build --verbosity normal Lab1.sln
