--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,7 @@ name: Lab1 Build And Tests
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ cuamckuu_lab1 ]
 
 jobs:
   build:
@@ -15,11 +13,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.0'
-    - name: List files
-      run: ls -la
     - name: Restore dependencies
-      run: dotnet restore lab1.sln
+      run: dotnet restore labs.sln
     - name: Build
-      run: dotnet build --no-restore lab1.sln
+      run: dotnet build --no-restore labs.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal lab1.sln
+      run: dotnet test --no-build --verbosity normal labs.sln
