chore: NuGet warnings disabled

--- a/lab2.DataLayer/lab2.DataLayer.csproj
+++ b/lab2.DataLayer/lab2.DataLayer.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
