feat: Added BLL.Implementations

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -2,11 +2,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+
+    <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
 
 </Project>
