build: Added way to run Github Actions manually

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,12 @@
 name: Labs Build And Tests
 
 on:
+  workflow_dispatch:
+    inputs:
+      name:
+        description: "Hello"
+        required: true
+        default: "World"
   push:
     branches: [ cuamckuu_lab2 ]
 
