--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,7 +3,7 @@ name: .NET
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ master, cuamckuu_lab2 ]
   pull_request:
     branches: [ master ]
 
